// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pull-request-merged-handler creates an issue 1`] = `
Array [
  Object {
    "body": "I am an example title

---
https://github.com/nerrad/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L9-L15
---
###### :rocket: This issue was generated by the [automations bot](https://github.com/nerrad/automations) based on a \`todo\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @nerrad",
    "owner": "nerrad",
    "repo": "tests",
    "title": "I am an example title",
  },
]
`;

exports[`pull-request-merged-handler creates an issue with a truncated title 1`] = `
Array [
  Object {
    "body": "This is a really, really, really, really, really, really, really, really, really, really long title

---
https://github.com/nerrad/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L9-L15
---
###### :rocket: This issue was generated by the [automations bot](https://github.com/nerrad/automations) based on a \`todo\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @nerrad",
    "owner": "nerrad",
    "repo": "tests",
    "title": "This is a really, really, really, really, really, really,...",
  },
]
`;

exports[`pull-request-merged-handler reopens a closed issue 1`] = `
Array [
  Object {
    "body": ":rocket: This issue has been reopened because the **\`todo\`** comment still exists in [****](https://github.com/nerrad/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/), as of 6c2373ad036d292f7e9467981ba8b467e8b8b0ff.

---
###### If this was not intentional, just remove the comment from your code.",
    "issue_number": 1,
    "owner": "nerrad",
    "repo": "tests",
  },
]
`;
